# auth-service.

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py  main2
app/api/: deps.py
app/api/routes/: auth.py  roles.py  users.py
app/core/: config.py
app/db/: redis.py  session.py
app/models/: role.py  user.py
app/schemas/: role.py  user.py
app/services/: auth.py
app/utils/: jwt.py  security.py
migrations/: env.py
migrations/versions/: 33a010350e85_fix_roles_table_and_foreign_key.py  3afcff200250_create_users_and_roles_tables.py  a40913b2230a_add_user_and_role_tables.py
